--- a/Tyuiu.KonovalovVA.Sprint0.Task6.V0/Tyuiu.KonovalovVA.Sprint0.Task6.V0.csproj
+++ b/Tyuiu.KonovalovVA.Sprint0.Task6.V0/Tyuiu.KonovalovVA.Sprint0.Task6.V0.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Tyuiu.KonovalovVA.Sprint0.Task6.V0.Test\Tyuiu.KonovalovVA.Sprint0.Task6.V0.Test.csproj" />
+  </ItemGroup>
+
 </Project>
